# dynamic_abac

./: .gitignore  README.md  databricks.yml  pyproject.toml  run_e2e_pipeline.py  set_up.py
notebooks/: verify_abac_policies.ipynb
resources/: seed_patient_tables.job.yml
sql/: abac_row_filter.sql  patient_tables.sql
src/dynamic_abac_demo/: __init__.py  seed_tables.py
src/dynamic_abac_demo/bootstrap_data/: patient_claims.csv  patient_demographics.csv  staff_patient_crosswalk.csv
