[project]
name = "dynamic_abac_demo"
version = "0.1.0"
description = "Synthetic patient demo data seeding for dynamic_abac DAB bundle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
seed = "dynamic_abac_demo.seed_tables:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
